# src/routes/auth.ts
@@ -7,6 +7,8 @@ const router = Router();
 
 router.post("/login", authRateLimiter, authController.login);
 router.post("/register", authRateLimiter, authController.register);
+router.post("/forgot-password", authRateLimiter, authController.forgotPassword);
+router.post("/reset-password", authRateLimiter, authController.resetPassword);
 
 router.get("/me", requireJwt, authController.me);
 router.patch("/perfil", requireJwt, authController.updateProfile);
